<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/nomeItemDetalheSelecionadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ellipsize="marquee"
        android:textSize="16sp"
        android:textColor="#ed8a00"
        android:visibility="invisible" />
    
    <TextView
        android:id="@+id/nomeItemDetalheTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomeItemDetalheSelecionadoTextView"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:ellipsize="marquee"
        android:text="@string/nome_item_detalhe"
        android:textSize="16sp"
        android:textColor="#ed8a00" />
    
    <TextView
        android:id="@+id/valorItemDetalheTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nomeItemDetalheTextView"
        android:ellipsize="marquee"
        android:text="@string/valor_item_detalhe"
        android:textSize="12sp"
        android:textColor="#197d19" />

    <TextView
        android:id="@+id/descricaoItemDetalheTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/valorItemDetalheTextView"
        android:ellipsize="marquee"
        android:text="@string/descricao_item_detalhe"
        android:textSize="12sp"
        android:textColor="#587585" />

    <Button
        android:id="@+id/voltarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_voltar"/>
    
    <Button
        android:id="@+id/comprarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_comprar"/>

</LinearLayout>
