<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9f0df"
    android:padding="5dp" >
    
    <CheckBox
        android:id="@+id/chk_ingrediente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/nomeItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chk_ingrediente"
        android:layout_marginTop="2dp"
        android:ellipsize="marquee"
        android:text="@string/nome_item"
        android:textColor="#ed8a00"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/valorItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nomeItemTextView"
        android:ellipsize="marquee"
        android:text="@string/valor_item"
        android:textColor="#197d19"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/descricaoItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/valorItemTextView"
        android:ellipsize="marquee"
        android:text="@string/descricao_item"
        android:textColor="#587585"
        android:textSize="12sp" />

</RelativeLayout>